Fix style to make sure that the buttons are aligned

--- a/admin/static/less/styles.less
+++ b/admin/static/less/styles.less
@@ -2650,6 +2650,7 @@ TODO: retire this
                 }
             }
             .add_index_li{
+                margin-top: 27px;
                 display: none;
             }
         }
